[package]
name = "query-authentication"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
cosmwasm-schema = "1.1.5"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
thiserror = "1.0"
remain = "0.2.2"
ripemd160 = "0.9.1"
secp256k1 = "0.20.3"
bech32 = "0.8.1"

sha2 = { version = "0.9.1", default-features = false }
sha3 = "0.10.8"

[dev-dependencies]
serde_derive = "1.0.80"
